# Open-Bug-Triage-RAG

./: .env.example  .gitignore  README.md  requirements.txt
data/: house_search_tickets_open.json  pyproject.toml
src/: app.py  open_bug_triage_rag.py  triage_core.py
