[project]
name = "open-bug-triage-rag"
version = "0.1.0"
description = "RAG system to triage an open bug backlog: find similar tickets, detect duplicates, and sweep by priority."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.1.7",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.36",
]

[tool.uv]
package = false
